--- a/aboutus.html
+++ b/aboutus.html
@@ -16,31 +16,22 @@
 </head>
 
 <body>
-        <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
-                <div class="container">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-                                <span class="navbar-toggler-icon"></span>
-                                </button>                                
-                       <a class="navbar-brand" href="./index.html">Ristorante Con Fusion</a>
-                       <div class="collapse navbar-collapse" id="Navbar">
-                            <ul class="navbar-nav mr-auto"> ... </ul>
-                        </div>            
-                        <li class="nav-item"><a class="nav-link" href="./index.html">
-                            <span class="fa fa-home fa-lg"></span> Home</a>
-                            </li>
-                            <li class="nav-item active"><a class="nav-link" href="#">
-                            <span class="fa fa-info fa-lg"></span> About</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="#">
-                            <span class="fa fa-list fa-lg"></span> Menu</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="#">
-                            <span class="fa fa-address-card fa-lg"></span> Contact</a>
-                            </li>
-                            
-              </ul>            
-                </div>
-              </nav>
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class="navbar-nav mr-auto">
+                        <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -99,10 +90,10 @@
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="file:///C:/Users/frabbani/AppData/Local/Temp/aboutus.html#">Home</a></li>
-                        <li><a href="file:///C:/Users/frabbani/AppData/Local/Temp/aboutus.html#">About</a></li>
-                        <li><a href="file:///C:/Users/frabbani/AppData/Local/Temp/aboutus.html#">Menu</a></li>
-                        <li><a href="file:///C:/Users/frabbani/AppData/Local/Temp/aboutus.html#">Contact</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./aboutus.html">About</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
